2006-03-20  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Updated version to 2.14 in docs.
	* vicious-extensions/Makefile.am: Patch to fix Makefile.am so
	  it builds test-ve-config even if the dependant glib, etc.
	  libraries are built statically on the system.  Fixes bug
	  #334934.  Patch provided by Dmitry V. Levin <ldv@altlinux.org>

2006-03-19  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_events.c: Fix error that causes a
	  core dump when you click on fields that have an id.
	  This should fix bug #332679.

2006-03-15  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c: Mark string "Welcome" as to be translated.  This
	  doesn't break the string freeze but with this change translators
	  can hopefully get this translated.
	* gui/gdmsetup.desktop.in: Fix TryExec to use EXPANDED_SBINDIR, so that
	  the program will run even if sbin isn't in the user's PATH.
	  
2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: One-line fix to Solaris auditing logic to
	  correct a problem that causes GDM to always fail to authenticate
	  when auditing is turned on.
	* vicious-extensions/Makefile.am: Fix reference to libvicious.a
	  so it is consistant with the other places it is referenced.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcomm.h: Correct definition of gdmcomm_set_allow_sleep
	  to avoid compile warning.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.0: 
	* NEWS: Updated.
	* configure.ac: Update to 2.14.0.

2006-03-13  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.[ch], daemon/gdmconfig.[ch], gui/gdmcommon.[ch],
	  gui/gdmsetup.c: Add new GET_CUSTOM_CONFIG_FILE gdmflexiserver
	  command so gdmsetup can edit the actual custom config file
	  being used by the daemon.

2006-03-05  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_canvas_item: Now open Options menu below
	  the button if possible, and above if there is no room below.