@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY legal SYSTEM "legal.xml">
-<!ENTITY version "2.13.0.8">
-<!ENTITY date "02/13/2006">
+<!ENTITY version "2.14.0">
+<!ENTITY date "03/20/2006">
 ]>
 <article id="index" lang="es">
   <articleinfo>
@@ -64,13 +64,13 @@
 
 
 
-    <releaseinfo>Este manual describe la versión  2.13.0.8 del Gestor de entrada de Gnome. Se actualizó por última vez en 13/02/2006.</releaseinfo>  
+    <releaseinfo>This manual describes version 2.14.0 of the GNOME Display Manager. It was last updated on 03/20/2006.</releaseinfo>  
   </articleinfo>
 
   <sect1 id="preface">
     <title>Términos y convenciones usados en este manual</title>
 
-    <para>Este manual describe la versión  2.13.0.8 del Gestor de entrada de Gnome. Se actualizó por última vez en 13/02/2006.</para>  
+    <para>This manual describes version 2.14.0 of the GNOME Display Manager. It was last updated on 03/20/2006.</para>  
 
     <para>Selector - Un programa que se usa para seleccionar un equipo remoto para gestionar una pantalla remotamente en la pantalla local (<command>gdmchooser</command>).</para>
 
