@@ -37,9 +37,9 @@
       </item>
     </fixed>
   </item>
-  <item type="pixmap">
-    <normal file="gnome-logo.png"/>
-    <pos x="-10" y="-10" anchor="se"/>
+  <item type="svg">
+    <normal file="gnome-logo.svg"/>
+    <pos x="-12" y="-12" width="30" height="47" anchor="se" />
   </item>
   <item type="label" id="clock">
     <normal color="#000000" font="Sans 12"/>
