@@ -1,5 +1,17 @@
 2006-03-20  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/greeter/themes/happygnome/gnome-logo.svg,
+	  gui/greeter/themes/happygnome/happygnome.xml
+	  gui/greeter/themes/happygnome-list/gnome-logo.svg,
+	  gui/greeter/themes/happygnome-list/happygnome.xml:
+	  Added new SVG official logos and now theme uses
+	  the new logo.
+	* gui/greeter/themes/happygnome/gnome-logo.png,
+	  gui/greeter/themes/happygnome-list/gnome-logo.png:
+	  Removed old logo.
+
+2006-03-20  Brian Cameron  <brian.cameron@sun.com>
+
 	* docs/C/gdm.xml: Updated version to 2.14 in docs.
 	* vicious-extensions/Makefile.am: Patch to fix Makefile.am so
 	  it builds test-ve-config even if the dependant glib, etc.
